# gl-cubes-screensaver

./: CMakeLists.txt  README.md
include/glad/: glad.h
resources/: rainbow_shader.frag  rainbow_shader.vert
src/: glad.c  main.cpp  openglErrorReporting.cpp  shader_loading.h  window_init.h
